src/test/deca/codegen/invalid/created/WhileTrue.deca
// Description:
// while true
// Resultats:
//

{
    int a = 2;
    while(true){
        a = a+a;
        println(a);
    }
}